# minibayes

./: .gitignore  CLAUDE.md  NOTICE.txt  README.md  minibayes-spec.md  pyproject.toml  roadmap.md
.github/workflows/: publish.yml
notebooks/: 00_quickstart.ipynb  01_mh_examples.ipynb  02_adaptive_mh_examples.ipynb  03_viz_showcase.ipynb  04_distributions_gallery.ipynb  05_hierarchical_models.ipynb  06_multivariate_normal.ipynb  07_ensemble_sampler.ipynb  08_model_comparison.ipynb
src/minibayes/: README.md  __init__.py  comparison.py  diagnostics.py  exceptions.py  inference.py  model.py  params.py  predictive.py  results.py
src/minibayes/distributions/: README.md  __init__.py  base.py  bernoulli.py  beta.py  cauchy.py  exponential.py  gamma.py  half_normal.py  inverse_gamma.py  laplace.py  lkj_cholesky.py  lognormal.py  multivariate_normal.py  normal.py  poisson.py  student_t.py  truncated_normal.py  uniform.py
src/minibayes/samplers/: README.md  __init__.py  adaptive.py  base.py  ensemble.py  mh.py
src/minibayes/transforms/: README.md  __init__.py  affine.py  base.py  corr_cholesky.py  identity.py  log.py  logit.py  shifted_log.py
src/minibayes/utils/: README.md  __init__.py  export.py  numerical.py  progress.py
src/minibayes/viz/: README.md  __init__.py  _utils.py  plots.py  style.py
tests/: __init__.py  conftest.py  test_comparison.py  test_diagnostics.py  test_distributions.py  test_export.py  test_inference.py  test_model.py  test_predictive.py  test_samplers.py  test_transforms.py  test_truncated_normal.py  test_utils.py  test_viz.py
