[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minibayes"
version = "0.1.0"
description = "A lightweight library for Bayesian inference designed for production deployment on resource-constrained environments."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "radusz", email = "theo@radusz.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["numpy", "scientific"]

dependencies = ["numpy>=1.24.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "scipy>=1.11.0",
]
viz = ["matplotlib>=3.7.0"]
notebooks = ["matplotlib>=3.7.0", "seaborn>=0.12.0", "jupyter>=1.0.0"]
all = [
    "minibayes[viz]",
    "minibayes[dev]",
]

[project.urls]
Homepage = "https://github.com/theoradusz/minibayes"
Repository = "https://github.com/theoradusz/minibayes.git"
Issues = "https://github.com/theoradusz/minibayes/issues"

# Optional: CLI entry points
# [project.scripts]
# my-command = "my_package.cli:main"

# ============================================================================
# SETUPTOOLS CONFIG
# ============================================================================

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
minibayes = ["py.typed"]

# ============================================================================
# BLACK - Code Formatting
# ============================================================================

[tool.black]
line-length = 140
target-version = ['py312']

# ============================================================================
# ISORT - Import Sorting
# ============================================================================

[tool.isort]
profile = "black"
line_length = 140
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# ============================================================================
# RUFF - Linting & Formatting (replaces black, isort, flake8)
# ============================================================================

[tool.ruff]
line-length = 140
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "NPY", # numpy-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "TC002", # numpy.typing imports - negligible overhead for numpy-based library
]

[tool.ruff.lint.isort]
known-first-party = ["minibayes"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================================
# MYPY - Static Type Checking
# ============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["minibayes.viz.*"]
# Relax strict settings for viz module - matplotlib stubs produce many Any types
disallow_any_expr = false
warn_unused_ignores = false

# ============================================================================
# PYTEST - Testing
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::minibayes.exceptions.ConvergenceWarning",
]

# ============================================================================
# COVERAGE (optional, if using pytest-cov)
# ============================================================================

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
